--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,16 +1,9 @@
 
 
 <div class="card flex justify-content-center mt-2">
-    <p-card header="List Products of cart" >
+    <!-- <p-card header="List Products of cart" >
         <div class="flex flex-wrap ml-5">
-            <!-- <div  style="width: 20%;height: 20%;" class="shadow-2 hover:shadow-7 text-center border-round-sm h-6rem surface-overlay 
-                      p-3 m-3 flex align-items-center justify-content-center font-bold" *ngFor="let cart of carts">
-             
-                                <img src="assets/images/{{cart.Phone.Image }}"  width="100" class="shadow-4" />
-                                <h4 class="mb-1">jj</h4>
-                                <h6 class="mt-0 mb-3">gggg</h6>
-
-            </div> -->
+   
 
             <div class="card  shadow-2   hover:shadow-7 text-center flex align-items-center justify-content-center p-3 m-3 "  style="width: 20%; height: 20%;" *ngFor="let cart of carts">
                 <img src="assets/images/{{cart.Phone.Image }}"  width="200" class="mt-3" />
@@ -27,6 +20,6 @@
                 <p class="mt-0 font-bold mb-3">Total price : {{cart.Phone.Price}} * {{basketNumber}} </p>
             </div>
         </div>
-    </p-card>
+    </p-card> -->
 
 </div>
