--- a/src/app/ecommerce-dashboard/ecommerce-dashboard.component.html
+++ b/src/app/ecommerce-dashboard/ecommerce-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<!-- <div class="grid">
     <div class="col-3">
         <div class="text-center p-3 border-round-sm  font-bold ">
 
@@ -80,4 +80,4 @@
         
     </div>
 
-</div> 
+</div>  -->
