--- a/src/app/phone/phone.component.html
+++ b/src/app/phone/phone.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
   <div class="row">
     <div class="col-2 mt-5">
@@ -158,7 +158,6 @@
   </tr>
 </ng-template>
 <ng-template pTemplate="summary">
-  <!-- <div class="flex align-items-center justify-content-between">In total there are {{ phone ? phone.length : 0 }} products.</div> -->
 </ng-template>
 
     </p-table>
@@ -209,10 +208,7 @@
             <input type="text" pInputText id="Brand" [(ngModel)]="phone.Brand" required autofocus />
             <small class="p-error" *ngIf="submitted && !phone.Brand">Brand is required.</small>
         </div>
-        <!-- <div class="flex col-5">
-          <p-inputNumber [(ngModel)]="value1" [showButtons]="true" buttonLayout="vertical" spinnerMode="vertical" inputId="vertical" decrementButtonClass="p-button-secondary"
-              incrementButtonClass="p-button-secondary" incrementButtonIcon="pi pi-plus" decrementButtonIcon="pi pi-minus"></p-inputNumber>
-          </div> -->
+
 
           <div class="input-group mb-3 stock">
             <button class="btn btn-primary" type="button "(click)="minusPhone()"  id="button-addon1">-</button>
@@ -231,7 +227,6 @@
 
 </div>
     
-      <!-- <div class="card mt-2">
        <div>
         <div class="card flex justify-content-center">
           <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '300px' }">
@@ -250,7 +245,7 @@
         </div>
        </div>
       </div> -->
-    </div>
-  </div>
+    <!-- </div>
+  </div> -->
 
 
