--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <div class="container-fluid">
     <div class="card">
-        <p-megaMenu [model]="items" styleClass="flex">
+        <!-- <p-megaMenu [model]="items" styleClass="flex">
 
             <ng-template pTemplate="start">
                 <p-button (click)="sidebarVisible = true" icon="pi pi-bars" styleClass="p-button-rounded p-button-info p-button-text" class="surface-100"  ></p-button>
@@ -17,7 +17,7 @@
                     <h3>Right Sidebar</h3>
                 </p-sidebar>
             </ng-template>
-        </p-megaMenu>
+        </p-megaMenu> -->
     </div>
 
     <app-home></app-home>
