--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,42 @@ showIcon="pi pi-arrow-up-right"
 hideIcon="pi pi-times"
 direction="down">
 </p-speedDial> -->
-<div class="grid surface-100">
+
+
+<div class="card" style="direction: rtl;">
+    <p-megaMenu [model]="items" styleClass="flex" >
+
+     
+        <ng-template pTemplate="end" >
+            <div >
+
+                <!-- <p-button type="button"  (click)="sidebarVisible2 = true" class="pi  pi-cog"  styleClass="p-button-rounded p-button-warning p-button-text"></p-button>
+                <p-sidebar [(visible)]="sidebarVisible2" position="right"  [style]="{'width':'250px'}">
+                    <h3>Right Sidebar</h3>
+                </p-sidebar> -->
+                <input type="text" pInputText placeholder="Search" style="margin-right: 30%;" />
+            </div>
+     
+
+        </ng-template>
+
+        <ng-template pTemplate="start">
+            <p-button (click)="sidebarVisible = true" icon="pi pi-bars" styleClass="p-button-rounded p-button-info p-button-text" class="surface-100"  ></p-button>
+            <p-sidebar [(visible)]="sidebarVisible"  position="right" [style]="{'width':'270px'}">
+                <ng-template pTemplate="header">Header Content</ng-template>
+                <ng-template pTemplate="content"> <header></header></ng-template>
+                <ng-template pTemplate="footer">Footer Content</ng-template>
+            </p-sidebar>
+                      <p-button type="button" styleClass="p-button-rounded  p-button-text"> خانه</p-button>
+
+            <!-- <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-3" /> -->
+        </ng-template>
+    </p-megaMenu>
+</div>
+
+
+
+<!-- <div class="grid surface-100">
     <div class="col-1">
         <div class="text-center  border-round-sm  font-bold ">
 
@@ -72,7 +107,7 @@ direction="down">
 </div>
  
 
-  </div>
+  </div> -->
 <!-- <footer></footer> -->
 
 <div class=" surface-100">  
