--- a/src/app/list-products/list-products.component.html
+++ b/src/app/list-products/list-products.component.html
@@ -1,4 +1,4 @@
-<!-- <p-table
+<p-table
 #dt
 [value]="products"
 [rows]="5"
@@ -55,4 +55,5 @@ currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
 </tr>
 </ng-template>
 <ng-template pTemplate="summary">
-</ng-template> -->
+<!-- <div class="flex align-items-center justify-content-between">In total there are {{ phone ? phone.length : 0 }} products.</div> -->
+</ng-template>
