--- a/src/app/banking-dashboard/banking-dashboard.component.html
+++ b/src/app/banking-dashboard/banking-dashboard.component.html
@@ -2,44 +2,44 @@
     <div class="col-3">
         <div class="text-center p-3 border-round-sm  font-bold ">
 
-            <!-- <p-card header="Title">
+            <p-card header="Title">
                 <p class="m-0">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
                     quas!
                 </p>
-            </p-card> -->
+            </p-card>
         </div>
     </div>
     <div class="col-3">
         <div class="text-center p-3 border-round-sm  font-bold ">
-            <!-- <p-card header="Title">
+            <p-card header="Title">
                 <p class="m-0">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
                     quas!
                 </p>
-            </p-card> -->
+            </p-card>
         </div>
     </div>
     <div class="col-3">
         <div class="text-center p-3 border-round-sm  font-bold ">
             
-            <!-- <p-card header="Title">
+            <p-card header="Title">
                 <p class="m-0">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
                     quas!
                 </p>
-            </p-card> -->
+            </p-card>
         </div>
     </div>
 
     <div class="col-3">
         <div class="text-center p-3 border-round-sm  font-bold ">
-            <!-- <p-card header="Title">
+            <p-card header="Title">
                 <p class="m-0">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
                     quas!
                 </p>
-            </p-card> -->
+            </p-card>
         </div>
     </div>
 </div>
@@ -47,7 +47,7 @@
 <div class="grid">
     <div class="col-8  ">
         <div class="text-center p-3 border-round-sm  font-bold ">
-        <!-- <app-line-chart></app-line-chart> -->
+        <app-line-chart></app-line-chart>
         </div>
     </div>
     <div class="col-4">
