--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 
-  <!-- <p-panelMenu [model]="items" [style]="{'width':'250px;margin-right:3%;'}"></p-panelMenu> -->
+  <p-panelMenu [model]="items" [style]="{'width':'250px;margin-right:3%;'}"></p-panelMenu>
 
