--- a/src/app/line-chart/line-chart.component.html
+++ b/src/app/line-chart/line-chart.component.html
@@ -1,3 +1,3 @@
 <div class="card p-4">
-    <!-- <p-chart type="line" [data]="data" [options]="options"></p-chart> -->
+    <p-chart type="line" [data]="data" [options]="options"></p-chart>
 </div>
